# lambdaworks_stark_platinum

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  TP3.ipynb  Untitled.ipynb  cairo_compile.Dockerfile  fibo_100.json  fibonacci3.out  fibonacci3_proof.out  fibonacci_1000.cairo  fibonacci_3.cairo  index.html  output.casm  print.html  program.json  requirements.txt  searchindex.js  searchindex.json
.github/workflows/: ci.yaml  gh-pages.yml  mdbook.yml
benches/: criterion_giza.rs  criterion_prover.rs  criterion_prover_70k.rs  criterion_prover_security.rs  criterion_starks.rs  criterion_table.rs  criterion_verifier.rs  criterion_verifier_70k.rs  criterion_verifier_security.rs  dhat_prover.rs
benches/criterion_utils/: utils.rs
benches/functions/: bench.rs  execution.rs  mod.rs  path.rs  stark.rs
benches/proofs/: fibonacci_10.proof  fibonacci_100.proof  fibonacci_1000.proof  fibonacci_10000.proof  fibonacci_1000_sec.proof  fibonacci_100_sec.proof  fibonacci_2000.proof  fibonacci_20000.proof  fibonacci_20000_sec.proof  fibonacci_2000_sec.proof  fibonacci_500.proof  fibonacci_5000.proof  fibonacci_5000_sec.proof  fibonacci_500_sec.proof  fibonacci_70000_sec.proof
cairo_programs/: compare_lesser_array.json  factorial_100.json  fibo.casm  fibonacci.cairo  fibonacci.casm  fibonacci.sierra  fibonacci_10000.cairo  fibonacci_500.json  fibonacci_cairo1.json  output_program.json  rc_program.json  signed_div_rem.json
cairo_programs/cairo0/: .gitignore  conditional.cairo  fibonacci_1000.memory  fibonacci_1000.trace  fibonacci_2000.cairo  fibonacci_20000.cairo  fibonacci_500.cairo  fibonacci_500.memory  fibonacci_500.trace  fibonacci_5000.cairo  fibonacci_70000.cairo
cairo_programs/cairo1/: .gitignore  fibonacci_cairo1.cairo
cairo_prover/: Cargo.toml
cairo_prover/benches/: criterion_giza.rs  criterion_prover.rs  criterion_prover_70k.rs  criterion_verifier.rs
cairo_prover/benches/proofs/: fibonacci_1000.proof  fibonacci_500.proof
cairo_prover/cairo_programs/cairo2/: fibonacci_cairo2.cairo  fibonacci_cairo2.casm  fibonacci_cairo2.json  fibonacci_cairo2_proof
cairo_prover/src/: air.rs  cairo_mem.rs  execution_trace.rs  lib.rs  main.rs  register_states.rs
cairo_prover/src/runner/: run.rs
cairo_prover/src/tests/: integration_tests.rs  mod.rs  utils.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/cairo/: execution_trace.md
docs/src/starks/: api.md  builtins.md  cairo_rap.md  cairo_trace.md  cairo_trace_descriptive.md  execution_trace.md  layouts.md  protocol.md  protocol_overview.md  recap.md  starks.md  under_the_hood.md  virtual_cols.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deserialize.rs
src/: lib.rs  main.rs  proof.rs  prover.rs  verifier.rs
src/air/: air.rs  debug.rs  frame.rs  mod.rs  traits.rs
src/air/cairo_air/: air.rs  trace.rs
src/air/constraints/: boundary.rs  evaluation_table.rs  evaluator.rs
src/air/example/: cairo.rs  dummy_air.rs  fibonacci_2_columns.rs  fibonacci_f17.rs  fibonacci_rap.rs  quadratic_air.rs  simple_fibonacci.rs
src/cairo/: air.rs  cairo_layout.rs  cairo_mem.rs  errors.rs  execution_trace.rs  mod.rs  register_states.rs  serialized.rs  serialized_proof.rs  wasm_wrappers.rs
src/cairo/decode/: instruction_flags.rs  instruction_offsets.rs
src/cairo/runner/: run.rs  vec_writer.rs
src/cairo/tests/: integration_tests.rs  utils.rs
src/cairo_run/: cairo_layout.rs  mod.rs  run.rs  vec_writer.rs
src/cairo_vm/: cairo_mem.rs  cairo_trace.rs  execution_trace.rs
src/cairo_vm/test_data/: assert_nn_new.json  factorial_100.memory  factorial_100.trace  fibonacci_1000.cairo  fibonacci_1000.json  fibonacci_10000.json  fibonacci_100000.json  lt_comparison.cairo  lt_comparison.json  program.json  rc_program.json  simple_program_new.json
src/fri/: fri_commitment.rs  fri_decommit.rs  fri_functions.rs  mod.rs
src/starks/: commitment.rs  config.rs  context.rs  debug.rs  domain.rs  frame.rs  grinding.rs  lib.rs  mod.rs  proof.rs  proof_options.rs  prover.rs  trace.rs  traits.rs  transcript.rs  utils.rs  verifier.rs
src/starks/constraints/: boundary.rs  evaluator.rs
src/starks/example/: dummy_air.rs  fibonacci_2_columns.rs  fibonacci_f17.rs  fibonacci_rap.rs  mod.rs  quadratic_air.rs  quartic_air.rs  simple_fibonacci.rs
src/starks/fri/: fri_commitment.rs  fri_decommit.rs  mod.rs
src/starks/proof/: errors.rs  options.rs  stark.rs
src/starks/tests/: integration_tests.rs
stark_prover/: Cargo.toml
stark_prover/src/: frame.rs  lib.rs  prover.rs  traits.rs  transcript.rs
stark_prover/src/constraints/: evaluator.rs
stark_prover/src/example/: dummy_air.rs
stark_prover/src/examples/: dummy_air.rs  fibonacci_2_columns.rs  fibonacci_rap.rs  quadratic_air.rs  simple_fibonacci.rs
stark_prover/src/fri/: fri_decommit.rs
stark_prover/src/proof/: options.rs  stark.rs
stark_prover/src/tests/: integration_tests.rs
starks/: api.html  builtins.html  cairo.html  cairo_cli.html  cairo_rap.html  cairo_trace.html  cairo_trace_descriptive.html  cairo_trace_succinct.html  faq.html  implementation.html  protocol.html  protocol_overview.html  recap.html  starks.html  under_the_hood.html  virtual_cols.html
tests/: cairo_air.json  integration_tests.rs  proof.json  wasm.rs
verifiers/cairo/: cairo_project.toml
verifiers/cairo/src/: air.cairo  boundary.cairo  lib.cairo  main.cairo  parse_cairo_proof.py  research.py  sample_proof.cairo  stark_proof.cairo  structs.cairo  utils.cairo
watcher_dispatcher/: Cargo.toml  README.md
