[package]
name = "lambdaworks-stark"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "af0a479", features = [
    "lambdaworks-serde",
] }
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks", rev = "af0a479" }
log = "0.4.17"
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
cairo-vm = { version = "0.6.0", features = ["cairo-1-hints"] }
sha3 = "0.10.6"
cairo-lang-starknet = "1.1.0"
serde_json = "1.0"
num-integer = "0.1.45"
itertools = "0.11.0"

# Parallelization crates
rayon = { version = "1.7.0", optional = true }

# Giza crates
giza-core = { git = "https://github.com/lambdaclass/giza", branch = "remove_prints", optional = true }
giza-prover = { git = "https://github.com/lambdaclass/giza", branch = "remove_prints", optional = true }
giza-runner = { git = "https://github.com/lambdaclass/giza", branch = "remove_prints", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.2.0"
hex = "0.4.3"
criterion = "0.4"
env_logger = "*"
test-log = { version = "0.2.11", features = ["log"] }
assert_matches = "1.5.0"
rstest = "0.17.0"
rand = "0.8.5"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
proptest = "1.2.0"

[features]
test_fiat_shamir = []
# This enables timing prints in prover and verifier
instruments = []
metal = ["lambdaworks-math/metal"]
parallel = ["dep:rayon"]
giza = ["dep:giza-core", "dep:giza-prover", "dep:giza-runner"]

[[bench]]
name = "criterion_prover"
harness = false
metal = ["lambdaworks-math/metal"]

[[bench]]
name = "criterion_prover_70k"
harness = false
metal = ["lambdaworks-math/metal"]

[[bench]]
name = "criterion_verifier"
harness = false
metal = ["lambdaworks-math/metal"]

[[bench]]
name = "criterion_verifier_70k"
harness = false

[[bench]]
name = "criterion_giza"
harness = false


[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.test]
lto = "thin"
opt-level = 3
debug = 2
