[workspace]
members = ["stark_prover", "cairo_prover"]
exclude = ["ensure-no_std"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.66"
repository = "https://github.com/lambdaclass/lambdaworks_stark_platinum"

[workspace.dependencies]
iai-callgrind = "0.3.1"
lambdaworks-stark-platinum = { path = "./stark_prover" }
lambdaworks-cairo-platinum = { path = "./cairo_prover" }

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.test]
lto = "thin"
opt-level = 3
debug = 2

